--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "twitter-api-v2": "^1.18.2",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "zod": "^3.23.8"
