--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
     "react": "^18.3.1",
+    "react-barcode": "^1.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
