--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-barcode": "^1.5.3",
     "react-day-picker": "^8.10.1",
