--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-barcode": "^1.5.3",
+    "react-component-export-image": "^1.0.6",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
