--- a/package.json
+++ b/package.json
@@ -1,95 +1,24 @@
 {
   "name": "rest-express",
   "version": "1.0.0",
-  "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx watch --clear-screen=false --exclude vite.config.ts.* server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "db:push": "drizzle-kit push"
+    "dev": "tsx watch --clear-screen=false --exclude vite.config.ts.* server/index.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
-    "@hugocxl/react-to-image": "^0.0.9",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-context-menu": "^2.2.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@replit/vite-plugin-shadcn-theme-json": "^0.0.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.36.0",
-    "drizzle-zod": "^0.5.1",
-    "embla-carousel-react": "^8.3.0",
-    "express": "^4.21.1",
-    "express-session": "^1.18.1",
-    "html2canvas": "^1.4.1",
-    "input-otp": "^1.2.4",
-    "jspdf": "^2.5.2",
-    "lucide-react": "^0.453.0",
-    "memorystore": "^1.6.7",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "pg": "^8.13.1",
-    "qrcode.react": "^4.1.0",
-    "react": "^18.3.1",
-    "react-barcode": "^1.5.3",
-    "react-component-export-image": "^1.0.6",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.1",
-    "react-resizable-panels": "^2.1.4",
-    "recharts": "^2.13.0",
-    "swr": "^2.2.5",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "twitter-api-v2": "^1.18.2",
-    "vaul": "^1.1.0",
-    "wouter": "^3.3.5",
-    "zod": "^3.23.8"
+    "@replit/database": "^2.0.5",
+    "@types/express": "4.17.21",
+    "@types/node": "20.11.24",
+    "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
+    "drizzle-orm": "^0.29.4",
+    "express": "4.18.3",
+    "rate-limiter-flexible": "^5.0.0",
+    "tsx": "4.7.1",
+    "twitter-api-v2": "^1.16.0"
   },
   "devDependencies": {
-    "@types/express": "4.17.21",
-    "@types/express-session": "^1.18.0",
-    "@types/node": "20.16.11",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.27.1",
-    "esbuild": "^0.24.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.15",
-    "tsx": "^4.19.1",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.11"
+    "@types/cors": "^2.8.17",
+    "typescript": "5.3.3"
   }
 }
